--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ http = "1"
 serde = "1"
 sha2 = "0.10"
 base16ct = "1"
+time = { version = "0.3", features = ["wasm-bindgen"] }
+tracing = "0.1"
+tracing-web = "0.1"
+tracing-subscriber = { version = "0.3", features = ["time", "json"] }
 
 [profile.release]
 lto = true
